[package]
name = "sayuri"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Useful Rust utilities"
repository = "https://github.com/MolotovCherry/sayuri"
readme = "../README.md"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Performance"] }

[target.'cfg(unix)'.dependencies]
libc =  "0.2.180"

[dependencies]
sayuri-proc = "0.1.1"
